# pc-optimize-fps-unleashed

./: README.md  README_TH.md  Run FPS Unleashed.bat  build-exe.bat  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish-release.ps1
docs/: README.md
release/: FPS Unleashed.msi
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: advisor.rs  cleaner.rs  games.rs  hardware.rs  hardware_probe.rs  lib.rs  main.rs  models.rs  network.rs  platform.rs  restore.rs  scanner.rs  store.rs
src-tauri/src/tweaks/: handlers.rs  latency.rs  mod.rs
src/components/boost/: BoostCard.tsx  ExpertChecklistModal.tsx
src/components/dashboard/: HardwareDetailsPanel.tsx  OptimizeBanner.tsx  StatCard.tsx
src/components/layout/: AppLayout.tsx  LanguageSwitcher.tsx  Sidebar.tsx
src/components/tweaks/: RiskBadge.tsx  TabBar.tsx  TweakRow.tsx
src/context/: TweakProvider.tsx
src/data/: boost-presets.ts  expert-guides.ts  tweaks.ts
src/hooks/: useSystemInfo.ts
src/i18n/: I18nProvider.tsx  types.ts
src/i18n/locales/: en.ts  th.ts
src/lib/: api.ts  tauri.ts
src/pages/: BoostPage.tsx  CleanerPage.tsx  DashboardPage.tsx  GamesPage.tsx  NetworkPage.tsx  PlaceholderPage.tsx  RestorePage.tsx  ScannerPage.tsx  SettingsPage.tsx  TweaksPage.tsx
src/types/: api.ts  system.ts  tweak.ts
