[package]
name = "pc-optimizer-pro"
version = "0.1.0"
description = "FPS Unleashed — Windows FPS optimization suite"
authors = ["FPS Unleashed"]
edition = "2021"

[lib]
name = "pc_optimizer_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
